infra/k8s/expiration-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expiration-depl
spec:
  selector:
    matchLabels:
      app: expiration
  template:
    metadata:
      labels:
        app: expiration
    spec:
      containers:
      - name: expiration
        image: tikzsz/expiration
        resources:
          limits:
            memory: "428Mi"
            cpu: "300m"
        ports:
        - containerPort: 3000
