infra/k8s/auth-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-mongo-depl
spec:
  selector:
    matchLabels:
      app: auth-mongo
  template:
    metadata:
      labels:
        app: auth-mongo
    spec:
      containers:
      - name: auth-mongo
        imagePullPolicy: IfNotPresent
        image: mongo
        resources:
          limits:
            memory: "228Mi"
            cpu: "300m"
        ports:
        - containerPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv
spec:
  selector:
    app: auth-mongo
  ports:
  - port: 27017
    name: db 
    targetPort: 27017
---

apiVersion: v1
kind: Service
metadata:
  name: auth-mongo-srv-node-port
spec:
  type: NodePort
  selector:
    app: auth-mongo
  ports:
  - port: 27017
    name: db 
    targetPort: 27017
    nodePort: 31017
