infra/k8s/nats-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming
          imagePullPolicy: IfNotPresent
          args:
            [
              "-p",
              "4222",
              "-m",
              "8222",
              "-hbi",
              "5s",
              "-hbt",
              "5s",
              "-hbf",
              "2",
              "-SD",
              "-cid",
              "ticketing",
            ]
          resources:
            limits:
              memory: "158Mi"
              cpu: "300m"
          ports:
            - name: client
              containerPort: 4222
            - name: monitoring
              containerPort: 8222
---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  selector:
    app: nats
  ports:
    - name: client
      port: 4222
      targetPort: 4222
    - name: monitoring
      port: 8222
      targetPort: 8222
---

apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  type: NodePort
  selector:
    app: nats
  ports:
    - name: client
      port: 4222
      targetPort: 4222
      nodePort: 30001
    - name: monitoring
      port: 8222
      targetPort: 8222
      nodePort: 30002
