infra/k8s/payment-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
spec:
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
      - name: payment
        image: tikzsz/payment
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: payment-srv
spec:
  selector:
    app: payment
  ports:
  - port: 3000
    targetPort: 3000
