infra/k8s/payment-mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-mongo-depl
spec:
  selector:
    matchLabels:
      app: payment-mongo
  template:
    metadata:
      labels:
        app: payment-mongo
    spec:
      containers:
      - name: payment-mongo
        image: mongo
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "300m"
        ports:
        - containerPort: 27017

---

apiVersion: v1
kind: Service
metadata:
  name: payment-mongo-srv
spec:
  selector:
    app: payment-mongo
  ports:
  - port: 27017
    targetPort: 27017
