infra/k8s/tickets-deply.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets
  template:
    metadata:
      labels:
        app: tickets
    spec:
      containers:
      - name: tickets
        image: tikzsz/tickets
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: tickets-srv
spec:
  selector:
    app: tickets
  ports:
  - port: 3000
    targetPort: 3000
