infra/k8s/tickets-mongo-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-depl
spec:
  selector:
    matchLabels:
      app: tickets-mongo
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      containers:
      - name: tickets-mongo
        image: mongo
        imagePullPolicy: IfNotPresent
        ports:
            - containerPort: 27017
        resources:
          limits:
            memory: "128Mi"
            cpu: "300m"


---

apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-srv
spec:
  selector:
    app: tickets-mongo
  ports:
  - port: 27017
    targetPort: 27017
